--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <title>Wasm Remapper</title>
   </head>
   <body>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
